Revert "firebase test"
This reverts commit cf7187a8acbdbfe9224a2673cccd5762f18138d0.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="distribution" content="web">
     <meta property="og:site_name" content="Cards" />
     <meta name="description" content="Card app for Magic the Gathering. Find and view Cards">
     <meta name="keywords" content="MTG,Cards,Magic,Search">
     <meta name="author" content="Linus Brännström">
     <title>MTG Finder</title>
-    <link rel="manifest" href="manifest.json">
+    <!--<link rel="manifest" href="manifest.json">-->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
@@ -37,18 +36,6 @@
         </div>
     </main>
 </body>
-
-<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  // TODO: Replace with your project's customized code snippet
-  var config = {
-    apiKey: "AIzaSyBaqlHimhwr2IIJL1S0jI4xsqmF64WrZ70",
-    authDomain: "miniprojekt-ca365.firebaseapp.com"
-  };
-  firebase.initializeApp(config);
-</script>
-
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <!--<script src="node_modules/popper.js/dist/popper.js"></script>-->
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
