--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="MTG,Cards,Magic,Search">
     <meta name="author" content="Linus Brännström">
     <title>Find MTG Cards</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/4.12.0/firebase-app.js"></script>
@@ -62,8 +65,8 @@
 </body>
 <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
 <script src="javascripts/firebase.js" type="text/javascript"></script>
-<script defer src="/__/functions/node_modules/jquery/dist/jquery.min.js"></script>
-<script defer src="/__/functions/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script defer src="javascripts/jquery.min.js"></script>
+<script defer src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/cards.js" type="text/javascript"></script>
 
 </html>
